--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "music-bot-ember",
+  "name": "music-bot",
   "main": "main.js",
-  "author": "Ember",
+  "author": "ZerioDev",
   "version": "8.0.0",
   "repository": "https://github.com/ZerioDev/Music-bot.git",
   "description": "A complete code to download for a cool Discord music bot.",
@@ -9,7 +9,7 @@
     "start": "node main.js"
   },
   "engines": {
-    "node": "18.20.2"
+    "node": "20.18.1"
   },
   "dependencies": {
     "@discord-player/extractor": "^4.3.1",
